hard-gists/5536498/run.log
=== Docker Run Log for 5536498 ===
Started at: Mi 29. Okt 15:45:00 CET 2025

[2025-10-29 15:45:01] START: Running container for 5536498
[2025-10-29 15:45:01] SUCCESS: Container 786d0235e3b9749c0709bc6df9d08f74f4fc832f6c9154555db37124008df5ac started for 5536498
=== Container logs for 5536498 ===
  File "/snippet.py", line 88
    print '# %s.connect(...): %r -> %r' % (__package__, name, args)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5536498 ===
[2025-10-29 15:45:03] INFO: Container 786d0235e3b9749c0709bc6df9d08f74f4fc832f6c9154555db37124008df5ac has stopped
